syntax = "proto3";
import "github.com/jtremback/upc-core/wire/wire.proto";

package wallet;

message Channel {
  enum Phase {
    PendingOpen = 0;
    Open = 1;
    PendingClosed = 2;
    Closed = 3;
  }
  string channel_id = 1;
  Phase phase = 2;

  // This is how
  wire.OpeningTx opening_tx = 3;
  wire.Envelope opening_tx_envelope = 4;

  wire.UpdateTx last_update_tx = 5;
  wire.Envelope last_update_tx_envelope = 6;

  wire.UpdateTx last_full_update_tx = 7;
  wire.Envelope last_full_update_tx_envelope = 8;

  EscrowProvider escrow_provider = 9;

  repeated Account accounts = 10;

  uint32 me = 12;
  repeated bytes fulfillments = 13;
}

message Account {
  string name = 1;
  bytes pubkey = 2;
  bytes privkey = 3;
  string address = 4;
  string escrow_provider = 5;
}

message EscrowProvider {
  string name = 1;
  bytes pubkey = 2;
  bytes privkey = 3;
  string address = 4;
}



// message Account {
//   string name = 1;
//   bytes pubkey = 2;
//   bytes privkey = 3;
//   string escrow_provider = 4;
// }

// message Counterparty {
//   string name = 1;
//   bytes pubkey = 2;
//   string address = 3;
// }